# leptos-sqlx-example

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20250104033546_initial.sql
src/: app.rs  error.rs  lib.rs  main.rs  server.rs  shared.rs
